--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,9 @@
 version: '3.1'
 
 services:
-  mongo:
-    image: mongo
-    container_name: App-Gym-Container
-    restart: always
-    ports:
-      - 27017:27017
-    volumes:
-      - mongo_data:/data/db
-
   app:
     build: .
     ports:
       - "3000:3000"
-    depends_on:
-      - mongo
-    environment:
-      - MONGO_URI=mongodb://mongo:27017/mygym
-
-volumes:
-  mongo_data:
+    env_file:
+      - .env
